app-test/testdata/typesystem/neg/algebraic-type-duplicate-variant/check/adt.check
Error in "testdata/typesystem/neg/algebraic-type-duplicate-variant/src/adt.cal" on line 2:
    type T : A | A(int a, bool b) end // error
                 ^^^^^^^^^^^^^^^^
A is already declared in this scope.